# hexagonal_architecture

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: audit.yml  main.yml  scheduled_audit.yml  scheduled_build.yml
configuration/: local.toml
graphql_api/: gql_pokemon.rs  pokemon_info.graphql  pokemon_info.rs
hexagonal_pokedex/: Cargo.toml  Dockerfile  README.md  docker-compose.yml
hexagonal_pokedex/configuration/: local.toml
hexagonal_pokedex/src/: app.rs  configuration.rs  lib.rs  main.rs  pokeapi.rs  pokemon_bounded_context.rs  routes.rs
hexagonal_pokedex/src/app/: configuration.rs  startup.rs  telemetry.rs
hexagonal_pokedex/src/cache/: service.rs
hexagonal_pokedex/src/configuration/: local.toml  settings.rs  startup.rs
hexagonal_pokedex/src/pokeapi/: service.rs
hexagonal_pokedex/src/pokemon_bounded_context/: adapter.rs  domain.rs  port.rs
hexagonal_pokedex/src/pokemon_bounded_context/adapter/: out.rs  route.rs
hexagonal_pokedex/src/pokemon_bounded_context/adapter/route/: error.rs  pokemon.rs  pokemon_translated.rs
hexagonal_pokedex/src/pokemon_bounded_context/domain/: pokemon.rs
hexagonal_pokedex/src/pokemon_bounded_context/port/: out.rs  service.rs
hexagonal_pokedex/src/pokemon_bounded_context/port/service/: pokemon_info.rs  pokemon_translator.rs
hexagonal_pokedex/src/routes/: pokemon_translated.rs
hexagonal_pokedex/src/translated/: service.rs
hexagonal_pokedex/tests/api/: health_check.rs  helpers.rs  pokemon.rs  pokemon_translated.rs
layered_pokedex/: .dockerignore  Cargo.toml  Dockerfile  README.md
layered_pokedex/configuration/: local.toml
layered_pokedex/graphql_api/: gql_pokemon.graphql  schema.graphql
layered_pokedex/src/: cache.rs  lib.rs  main.rs  translated.rs
layered_pokedex/src/app/: configuration.rs  startup.rs
layered_pokedex/src/cache/: service.rs
layered_pokedex/src/pokeapi/: pokemon.rs
layered_pokedex/src/routes/: pokemon.rs  pokemon_translated.rs
layered_pokedex/src/translated/: io.rs
layered_pokedex/tests/api/: helpers.rs
src/: app.rs  lib.rs  main.rs  pokeapi.rs  routes.rs  translated.rs
src/app/: configuration.rs  errors.rs  routes.rs  startup.rs
src/pokeapi/: pokemon.rs  service.rs
src/routes/: errors.rs  pokemon.rs  pokemon_translated.rs
src/translated/: io.rs  service.rs
tests/api/: health_check.rs  helpers.rs  mod.rs  pokemon.rs  pokemon_translated.rs
