[package]
name = "pok"
version = "0.1.0"
authors = ["angelocat <catalaniangelo@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pokedex"

[dependencies]
actix-web = "4.0.0-beta.8"

[dev-dependencies]
actix-rt = "~2"
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "~1.3", features = ["net", "macros", "rt"] }
