[package]
name = "pok"
version = "0.1.0"
authors = ["angelocat <catalaniangelo@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pokedex"

[dependencies]
actix-web = "4.0.0-beta.8"
graphql_client = "~0.10"
reqwest = { version = "~0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = "1.0.126"

[dev-dependencies]
actix-rt = "~2"
tokio = { version = "~1.3", features = ["net", "macros", "rt"] }
wiremock = "0.5.2"
