[package]
name = "layered_pokedex"
version = "0.1.0"
authors = ["angelocat <catalaniangelo@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "layered_pokedex"

[dependencies]
actix-web = "4.0.0-beta.8"
anyhow = "1.0.40"
config = "0.11"
graphql_client = "0.10"
redis = { version = "0.21.2", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "~1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.24"
tracing = { version = "~0.1", features = ["log"] }
tracing-actix-web = "0.4.0-beta.9"
tracing-bunyan-formatter = "~0.2.4"
tracing-futures = "~0.2"
tracing-subscriber = { version = "0.2.12", features = ["registry", "env-filter"] }

[dev-dependencies]
actix-rt = "2"
lazy_static = "1.4"
rand = "0.8.4"
tokio = { version = "1.3", features = ["net", "macros", "rt"] }
wiremock = "0.5.2"
